# ppx_alcotest

./: .ocamlformat  README.md  dune-project  ppx_alcotest.opam
src/: dune  ppx_alcotest.ml
test/: dune  dune.scaffold-inc  spec.ml
test/failing/: dune  dune.inc
test/passing/: dune  dune.inc  test.expected  test.ml
